Video + Images added

--- a/index.html
+++ b/index.html
@@ -93,77 +93,74 @@
             <div class="container text-center">
                 <h2>Gallery</h2>
                 <p>A glimpse into the ambiance and experiences at The Manhattan Nairobi.</p>
-
-                <h3>Interior</h3>
-                <div class="carousel-container">
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/FFC72C/000000?text=Interior+1" alt="Manhattan Interior 1">
+                <div class="gallery-grid">
+                    <div class="gallery-item">
+                        <img src="images/download.jpg" onclick="openModal(this)">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/FFC72C/000000?text=Interior+2" alt="Manhattan Interior 2">
+                    <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/FFC72C/000000?text=Video+Preview"
+                                data-video="videos/06c66d2c5acf9202970ec311910edf80.mp4" 
+                                alt="Gallery Video" 
+                                onclick="openModal(this)">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/FFC72C/000000?text=Interior+3" alt="Manhattan Interior 3">
+                    <div class="gallery-item">
+                        <img src="images/Follow me_.jpg" onclick="openModal(this)">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/FFC72C/000000?text=Interior+4" alt="Manhattan Interior 4">
+                    <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/FFC72C/000000?text=Video+Preview"
+                                data-video="videos/1000265326.mp4" 
+                                alt="Gallery Video" 
+                                onclick="openModal(this)">
                     </div>
-                    <button class="carousel-prev">❮</button>
-                    <button class="carousel-next">❯</button>
-                    <div class="carousel-dots">
-                        <span class="dot active"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
+                    <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/FFC72C/000000?text=Video+Preview"
+                                data-video="videos/1000265332.mp4" 
+                                alt="Gallery Video" 
+                                onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/FFC72C/000000?text=Video+Preview"
+                                data-video="videos/46604a48a1a06a6540a0ae245294db14.mp4" 
+                                alt="Gallery Video" 
+                                onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/FFC72C/000000?text=Video+Preview"
+                                data-video="your-video-file.mp4" 
+                                alt="Gallery Video" 
+                                onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
+                    </div>
+                     <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
+                    </div>
+                     <div class="gallery-item">
+                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
                     </div>
                 </div>
 
-                <h3>Food & Drinks</h3>
-                <div class="carousel-container">
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/A0522D/FFFFFF?text=Gourmet+Dish+1" alt="Gourmet Dish 1">
-                    </div>
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/A0522D/FFFFFF?text=Signature+Cocktail+1" alt="Signature Cocktail 1">
-                    </div>
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/A0522D/FFFFFF?text=Appetizer+Platter" alt="Appetizer Platter">
-                    </div>
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/A0522D/FFFFFF?text=Craft+Beer+Selection" alt="Craft Beer Selection">
-                    </div>
-                    <button class="carousel-prev">❮</button>
-                    <button class="carousel-next">❯</button>
-                    <div class="carousel-dots">
-                        <span class="dot active"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                    </div>
-                </div>
-
-                <h3>Live Music Scene</h3>
-                <div class="carousel-container">
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/4CAF50/FFFFFF?text=Live+Band+1" alt="Live Band Performance 1">
-                    </div>
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/4CAF50/FFFFFF?text=DJ+Setup" alt="DJ Setup">
-                    </div>
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/4CAF50/FFFFFF?text=Dancing+Crowd" alt="Dancing Crowd">
-                    </div>
-                    <div class="carousel-slide">
-                        <img src="https://placehold.co/800x500/4CAF50/FFFFFF?text=Stage+View" alt="Stage View">
-                    </div>
-                    <button class="carousel-prev">❮</button>
-                    <button class="carousel-next">❯</button>
-                    <div class="carousel-dots">
-                        <span class="dot active"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                    </div>
+                <div id="galleryModal" class="gallery-modal" onclick="closeModal()">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" id="modalImg" alt="" style="display:none;">
+                    <video class="modal-content" id="modalVideo" controls style="display:none;max-width:80vw;max-height:80vh;border-radius:8px;"></video>
+                    <div id="caption"></div>
                 </div>
             </div>
         </section>
@@ -194,5 +191,8 @@
             <p>© 2025 The Manhattan Nairobi. All rights reserved.</p>
         </div>
     </footer>
+    <a href="#" class="back-to-top" id="backToTopBtn" aria-label="Back to top">
+        <i class="fas fa-arrow-up"></i>
+    </a>
 </body>
 </html>
