auto-scroll effect added

--- a/index.html
+++ b/index.html
@@ -94,50 +94,21 @@
                 <h2>Gallery</h2>
                 <p>A glimpse into the ambiance and experiences at The Manhattan Nairobi.</p>
                 <div class="gallery-grid">
+                    <!-- Images -->
                     <div class="gallery-item">
                         <img src="images/download.jpg" onclick="openModal(this)">
-                    </div>
-                    <div class="gallery-item">
-                        <img src="https://placehold.co/400x250/FFC72C/000000?text=Video+Preview"
-                                data-video="videos/06c66d2c5acf9202970ec311910edf80.mp4" 
-                                alt="Gallery Video" 
-                                onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
                         <img src="images/Follow me_.jpg" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://placehold.co/400x250/FFC72C/000000?text=Video+Preview"
-                                data-video="videos/1000265326.mp4" 
-                                alt="Gallery Video" 
-                                onclick="openModal(this)">
+                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
                         <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="https://placehold.co/400x250/FFC72C/000000?text=Video+Preview"
-                                data-video="videos/1000265332.mp4" 
-                                alt="Gallery Video" 
-                                onclick="openModal(this)">
-                    </div>
-                    <div class="gallery-item">
                         <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
-                    </div>
-                    <div class="gallery-item">
-                        <img src="https://placehold.co/400x250/FFC72C/000000?text=Video+Preview"
-                                data-video="videos/46604a48a1a06a6540a0ae245294db14.mp4" 
-                                alt="Gallery Video" 
-                                onclick="openModal(this)">
-                    </div>
-                    <div class="gallery-item">
-                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
-                    </div>
-                    <div class="gallery-item">
-                        <img src="https://placehold.co/400x250/FFC72C/000000?text=Video+Preview"
-                                data-video="your-video-file.mp4" 
-                                alt="Gallery Video" 
-                                onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
                         <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
@@ -148,11 +119,42 @@
                     <div class="gallery-item">
                         <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
                     </div>
-                     <div class="gallery-item">
+                    <div class="gallery-item">
                         <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
                     </div>
-                     <div class="gallery-item">
+                    <div class="gallery-item">
                         <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
+                    </div>
+                    <!-- Videos -->
+                    <div class="gallery-item">
+                        <img src="images/25e2849f401b4ef489a812f41d5f8d5e.jpg"
+                            data-video="videos/06c66d2c5acf9202970ec311910edf80.mp4"
+                            alt="Gallery Video"
+                            onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/25e2849f401b4ef489a812f41d5f8d5e.jpg"
+                            data-video="videos/1000265326.mp4"
+                            alt="Gallery Video"
+                            onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/25e2849f401b4ef489a812f41d5f8d5e.jpg"
+                            data-video="videos/1000265332.mp4"
+                            alt="Gallery Video"
+                            onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/25e2849f401b4ef489a812f41d5f8d5e.jpg"
+                            data-video="videos/46604a48a1a06a6540a0ae245294db14.mp4"
+                            alt="Gallery Video"
+                            onclick="openModal(this)">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="images/25e2849f401b4ef489a812f41d5f8d5e.jpg"
+                            data-video="your-video-file.mp4"
+                            alt="Gallery Video"
+                            onclick="openModal(this)">
                     </div>
                 </div>
 
