Logo has been added, few errors omitted

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">The Manhattan Nairobi</a>
+                <a href="index.html">
+                <img src="images/Manhattan Logo.png" alt="The Manhattan Nairobi Logo" class="site-logo">
+                </a>
             </div>
             <ul class="nav-links">
                 <li><a href="#about">About Us</a></li>
@@ -127,34 +129,34 @@
                     </div>
                     <!-- Videos -->
                     <div class="gallery-item">
-                        <img src="images/25e2849f401b4ef489a812f41d5f8d5e.jpg"
-                            data-video="videos/06c66d2c5acf9202970ec311910edf80.mp4"
-                            alt="Gallery Video"
-                            onclick="openModal(this)">
+                        <video src="videos/06c66d2c5acf9202970ec311910edf80.mp4"
+                        controls muted playsinline>
+                        Your browser does not support the video tag.
+                        </video>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/25e2849f401b4ef489a812f41d5f8d5e.jpg"
-                            data-video="videos/1000265326.mp4"
-                            alt="Gallery Video"
-                            onclick="openModal(this)">
+                        <video src="videos/1000265326.mp4"
+                        controls muted playsinline>
+                        Your browser does not support the video tag.
+                        </video>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/25e2849f401b4ef489a812f41d5f8d5e.jpg"
-                            data-video="videos/1000265332.mp4"
-                            alt="Gallery Video"
-                            onclick="openModal(this)">
+                        <video src="videos/1000265332.mp4"
+                        controls muted playsinline>
+                        Your browser does not support the video tag.
+                        </video>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/25e2849f401b4ef489a812f41d5f8d5e.jpg"
-                            data-video="videos/46604a48a1a06a6540a0ae245294db14.mp4"
-                            alt="Gallery Video"
-                            onclick="openModal(this)">
+                        <video src="videos/46604a48a1a06a6540a0ae245294db14.mp4"
+                        controls muted playsinline>
+                        Your browser does not support the video tag.
+                        </video>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/25e2849f401b4ef489a812f41d5f8d5e.jpg"
-                            data-video="your-video-file.mp4"
-                            alt="Gallery Video"
-                            onclick="openModal(this)">
+                        <video src="videos/06c66d2c5acf9202970ec311910edf80.mp4"
+                        controls muted playsinline>
+                        Your browser does not support the video tag.
+                        </video>
                     </div>
                 </div>
 
