--- a/drinks-menu.html
+++ b/drinks-menu.html
@@ -13,7 +13,9 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">The Manhattan Nairobi</a>
+                <a href="index.html">
+                <img src="images/Manhattan Logo.png" alt="The Manhattan Nairobi Logo" class="site-logo">
+                </a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html#about">About Us</a></li>
@@ -451,5 +453,8 @@
             <p>&copy; 2025 The Manhattan Nairobi. All rights reserved.</p>
         </div>
     </footer>
+    <a href="#" class="back-to-top" id="backToTopBtn" aria-label="Back to top">
+        <i class="fas fa-arrow-up"></i>
+    </a>
 </body>
 </html>
