--- a/events-calendar.html
+++ b/events-calendar.html
@@ -13,8 +13,10 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <a href="index.html">The Manhattan Nairobi</a>
+           <div class="logo">
+                <a href="index.html">
+                <img src="images/Manhattan Logo.png" alt="The Manhattan Nairobi Logo" class="site-logo">
+                </a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html#about">About Us</a></li>
@@ -84,5 +86,8 @@
             <p>&copy; 2025 The Manhattan Nairobi. All rights reserved.</p>
         </div>
     </footer>
+    <a href="#" class="back-to-top" id="backToTopBtn" aria-label="Back to top">
+        <i class="fas fa-arrow-up"></i>
+    </a>
 </body>
 </html>
