--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
                 <p>Join us for an exciting lineup of live music, themed nights, and special gatherings.</p>
                 <div class="event-preview">
                     <div class="event-item">
-                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Live+Music" alt="Live Music Event" class="img-responsive">
-                        <h3>Cocktail Night</h3>
-                        <p class="event-date"><i class="far fa-calendar-alt"></i>July, 31st</p>
-                        <p>Hosted by <a href="https://www.instagram.com/jamalcarl7?igsh=bjcwcWFzMTgyc3g3">@jamalcarl7</a> and <a href="https://www.instagram.com/maryanne_mamagg">@maryanne_mamagg</a></p>
-                        <p>Join us this Thursday for a night of exquisite cocktails and live music.</p>
+                        <img src="images/a91517fe46cac0dcc9dda9e90388eac7.jpg" alt="Monday Blues" class="img-responsive">
+                        <h3>Monday Blues</h3>
+                        <p class="event-date"><i class="far fa-calendar-alt"></i>August, 25th</p>
+                        <p>Hosted by <a href="https://www.instagram.com/deejay__teff?igsh=dWU2dDZ3a3JpdThh">@deejay_teff</a> and <a href="https://www.instagram.com/pakietheedj?igsh=eWRncmY4ZGdrdW5i">@pakietheedj</a></p>
+                        <p>Monday Blues at Manhattan</p>
                     </div>
                     <div class="event-item">
-                        <img src="https://placehold.co/400x250/957DAD/FFFFFF?text=Reggae+Nights" alt="Reggae Nights" class="img-responsive">
-                        <h3>Unfiltered Fridays</h3>
+                        <img src="images/d65d56155b0c3cdb3ee11417f68aa00c.jpg" alt="Reggae Nights" class="img-responsive">
+                        <h3>Reggae Tuesdays</h3>
                         <p class="event-date"><i class="far fa-calendar-alt"></i> August, 1st</p>
-                        <p>Hosted by <a href="https://www.instagram.com/mr_georgetailor">@mr_georgetailor</a> and <a href="https://www.instagram.com/venrick_kenya">@venrick_kenya</a></p>
+                        <p>Hosted by <a href="https://www.instagram.com/manduve18?igsh=MWJrODEwZmNxZTc4OQ==">@manduve18</a> and <a href="https://www.instagram.com/gaso16?igsh=djN5eDVldGRtMjBv">@gaso16</a></p>
                         <p>Get ready for an unfforgettable night with Kriss Darlin and the full Dohty Family Crew</p>
                     </div>
                 </div>
@@ -130,31 +130,31 @@
                     <!-- Videos -->
                     <div class="gallery-item">
                         <video src="videos/06c66d2c5acf9202970ec311910edf80.mp4"
-                        controls muted playsinline>
+                        muted autoplay playsinline controls loop>
                         Your browser does not support the video tag.
                         </video>
                     </div>
                     <div class="gallery-item">
                         <video src="videos/1000265326.mp4"
-                        controls muted playsinline>
+                         muted autoplay playsinline controls loop>
                         Your browser does not support the video tag.
                         </video>
                     </div>
                     <div class="gallery-item">
                         <video src="videos/1000265332.mp4"
-                        controls muted playsinline>
+                         muted autoplay playsinline controls loop>
                         Your browser does not support the video tag.
                         </video>
                     </div>
                     <div class="gallery-item">
                         <video src="videos/46604a48a1a06a6540a0ae245294db14.mp4"
-                        controls muted playsinline>
+                         muted autoplay playsinline controls loop>
                         Your browser does not support the video tag.
                         </video>
                     </div>
                     <div class="gallery-item">
                         <video src="videos/06c66d2c5acf9202970ec311910edf80.mp4"
-                        controls muted playsinline>
+                         muted autoplay playsinline controls loop>
                         Your browser does not support the video tag.
                         </video>
                     </div>
