--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
                 <p>Join us for an exciting lineup of live music, themed nights, and special gatherings.</p>
                 <div class="event-preview">
                     <div class="event-item">
-                        <img src="images/a91517fe46cac0dcc9dda9e90388eac7.jpg" alt="Monday Blues" class="img-responsive">
+                        <img src="images/a91517fe46cac0dcc9dda9e90388eac7.jpg" alt="Monday Blues" class="img-responsive event-image">
                         <h3>Monday Blues</h3>
                         <p class="event-date"><i class="far fa-calendar-alt"></i>August, 25th</p>
                         <p>Hosted by <a href="https://www.instagram.com/deejay__teff?igsh=dWU2dDZ3a3JpdThh">@deejay_teff</a> and <a href="https://www.instagram.com/pakietheedj?igsh=eWRncmY4ZGdrdW5i">@pakietheedj</a></p>
                         <p>Monday Blues at Manhattan</p>
                     </div>
                     <div class="event-item">
-                        <img src="images/d65d56155b0c3cdb3ee11417f68aa00c.jpg" alt="Reggae Nights" class="img-responsive">
+                        <img src="images/d65d56155b0c3cdb3ee11417f68aa00c.jpg" alt="Reggae Nights" class="img-responsive event-image">
                         <h3>Reggae Tuesdays</h3>
-                        <p class="event-date"><i class="far fa-calendar-alt"></i> August, 1st</p>
+                        <p class="event-date"><i class="far fa-calendar-alt"></i> August, 26th</p>
                         <p>Hosted by <a href="https://www.instagram.com/manduve18?igsh=MWJrODEwZmNxZTc4OQ==">@manduve18</a> and <a href="https://www.instagram.com/gaso16?igsh=djN5eDVldGRtMjBv">@gaso16</a></p>
-                        <p>Get ready for an unfforgettable night with Kriss Darlin and the full Dohty Family Crew</p>
+                        <p>Sii Reggae Tuesdays tu, tuvibe na Dohty Family at Manhattan</p>
                     </div>
                 </div>
                 <div class="text-center">
