--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                 <div class="gallery-grid">
                     <!-- Images -->
                     <div class="gallery-item">
-                        <img src="images/download.jpg" onclick="openModal(this)">
+                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/Follow me_.jpg" onclick="openModal(this)">
+                        <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
                     </div>
                     <div class="gallery-item">
                         <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Gallery+Image" onclick="openModal(this)">
@@ -153,7 +153,7 @@
                         </video>
                     </div>
                     <div class="gallery-item">
-                        <video src="videos/06c66d2c5acf9202970ec311910edf80.mp4"
+                        <video src="videos/1ecce1bf6391d2e0fead078fcabde929.mp4"
                          muted autoplay playsinline controls loop>
                         Your browser does not support the video tag.
                         </video>
